--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Demnächst gibt's hier das aktuelle Menü.
+<!DOCTYPE html>
+
+<html>
+<head>
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <title>Snack.Eck.Menu</title>
+</head>
+<body>
+  <h1>
+    Nächsten Freitag im Snack.Eck:
+  </h1>
+  
+  <img src="./beispiel.jpg">
+    
+</body>
+</html>
