--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Nächsten Freitag im Snack.Eck:
   </h1>
   
-  <img src="./Cappuchino.jpg">
+  <img src="Cappuchino.jpg">
     
 </body>
 </html>
