--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <h1>
-    Nächsten Freitag im Snack.Eck:
+    Demnächst im Snack.Eck:
   </h1>
   
-  <img src="Cappuchino.jpg">
+  <img src="Cappuchino.jpg" length="100">
     
 </body>
 </html>
