--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Demnächst im Snack.Eck:
   </h1>
   
-  <img src="Cappuchino.jpg" length="100">
+  <img src="Cappuchino.jpg" width="100">
     
 </body>
 </html>
