--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Demnächst im Snack.Eck:
   </h1>
   
-  <img src="Cappuchino.jpg" width=200 heigth=200>
+  <img src="Cappuchino.jpg" width=200 heigth=200 align="center">
     
 </body>
 </html>
