--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     Demnächst im Snack.Eck:
   </h1>
   
-  <img src="Cappuchino.jpg" width=300 heigth=300 align=center>
+  <div align=center>
     
+  <img src="Cappuchino.jpg" width=300 heigth=300>
+  
+  </div>
+  
 </body>
 </html>
