--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Demnächst im Snack.Eck:
   </h1>
   
-  <div align=center>
+  <div align="center">
     
   <img src="Cappuchino.jpg" width=300 heigth=300>
   
