--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>Snack.Eck.Menu</title>
 </head>
 <body>
+  <div align="center">
   <h1>
     Demnächst im Snack.Eck:
   </h1>
+  </div>
   
   <div align="center">
     
