--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
       box-sizing: border-box;
     }
     button {
-      padding: 0.6rem 0.9rem; border: none; background: #0366d6; color: #fff;
+      padding: 0.6rem 0.9rem; border: none; background: #0366d6; color: #ffffff;
       border-radius: 6px; cursor: pointer;
     }
     .hint { font-size: 0.9rem; color: #555; margin-top: 0.5rem; }
